--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -583,7 +583,7 @@ div.image_circle {
 .section:nth-of-type(99n-97) {
     position: relative;
     scroll-snap-align: start;
-    background: url(src/img/me_at_goddard.jpg) 73% no-repeat;
+    background: url(img/me_at_goddard.jpg) 73% no-repeat;
     background-size: cover;
     border-radius: .0rem;
     color: #FFF;
